<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/pens_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp">

            <ImageView
                android:id="@+id/pens_logo"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:src="@drawable/ic_pittsburgh_penguins_logo" />

            <TextView
                android:id="@+id/pens_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/initial_score"
                android:textColor="@color/colorScores"
                android:textSize="56sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/offside_pens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/initial_score"
                    android:textColor="@color/light_blue"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_penalty_pens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/initial_score"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_offside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/light_blue"
                android:onClick="addOffsidePens"
                android:text="@string/offside" />

            <Button
                android:id="@+id/btn_penalty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/orange"
                android:onClick="addTimePenaltyPens"
                android:text="@string/penalty" />

            <Button
                android:id="@+id/btn_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="addScorePens"
                android:text="@string/score" />

            <ImageView
                android:id="@+id/nhl_logo"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/nhl_shield" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/primaryDarkColor" />


        <LinearLayout
            android:id="@+id/juve_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp">

            <ImageView
                android:id="@+id/juve_logo"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:src="@drawable/ic_juventus_fc_2017_logo" />

            <TextView
                android:id="@+id/juve_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/initial_score"
                android:textColor="@color/colorScores"
                android:textSize="56sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/yellow_fouls_juve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/initial_score"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/red_cards_juve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/initial_score"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/yellow"
                android:onClick="addYellowCardsJuve"
                android:text="@string/yellow" />

            <Button
                android:id="@+id/btn_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/red"
                android:onClick="addRedCardsJuve"
                android:text="@string/red" />

            <Button
                android:id="@+id/btn_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/green"
                android:onClick="addGoalJuve"
                android:text="@string/goal" />

            <ImageView
                android:id="@+id/serie_a_logo"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/serie_a" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:onClick="reset"
        android:text="@string/reset" />

</RelativeLayout>